--- a/app/views/managers/_form.html.erb
+++ b/app/views/managers/_form.html.erb
@@ -17,6 +17,6 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
     <%= f.label :password %>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
     <%= f.submit %>
 <% end %>
