--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag('/session', method: :post) do %>
+<%= form_tag('/session') do %>
     <%= label_tag(:username, "Username: ") %>
     <%= text_field_tag(:username) %>
     <%= label_tag(:password, "Password: ") %>
