--- a/app/views/managers/_form.html.erb
+++ b/app/views/managers/_form.html.erb
@@ -18,5 +18,5 @@
     <%= f.text_field :email %>
     <%= f.label :password %>
     <%= f.password_field :password %>
-    <%= f.submit %>
+    <%= f.submit "Sign Up" %>
 <% end %>
