add flash message for login and link_to band on manager show page

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
 <% @bands.each do |band| %>
-    <li><%= band.name %></li>
+    <li><%= link_to band.name, band_path(band) %></li>
 <% end %>
 </ul>
