--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -2,5 +2,7 @@
 <br>
 <ul>
 <% @bands.each do |band| %>
-    <li><%= band.name %></li>
+    <li><%= link_to band.name, band_path(band) %></li>
 <% end %>
+<br>
+<%= link_to "Add New Band", new_band_path %>
