--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,4 +1,8 @@
-<%= form_for @manager, url: signin_path, method: :post do |f| %>
+<% if !!flash[:message] %>
+    <%= flash[:message] %>
+<% end %>
+
+<%= form_for(:session, url: signin_path) do |f| %>
     <%= f.label :username %>
     <%= f.text_field :username %>
     <%= f.label :password %>
