--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%= @band.name %></h1>
+<ul>
+    <% @band.members do |member| %>
+        <li><%= member.name %></li>
+    <% end %>
+</ul>
 <br>
 <%= link_to "Edit", edit_band_path(@band) %>
 <%= link_to 'Delete', band_path(@band), method: :delete, data: { confirm: "Are you sure?" }%>
