--- a/app/views/managers/_form.html.erb
+++ b/app/views/managers/_form.html.erb
@@ -1,17 +1,5 @@
 <%= form_for @manager do |f| %>
-  <% if @manager.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@manager.errors.count, "error") %> prohibited this manager from being saved:
-      </h2>
-
-      <ul>
-      <% @manager.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= render partial: 'bands/errors', locals: {model: @manager}%>
     <%= f.label :username %>
     <%= f.text_field :username %>
     <%= f.label :email %>
