--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -1,10 +1,10 @@
-<h1><%= @manager.username %></h1>
-<br>
+<h1>Bands You Manage: </h1>
 <ul>
 <% @bands.each do |band| %>
     <li><%= link_to band.name, band_path(band) %></li>
 <% end %>
 <br>
 <%= link_to "Add New Band", new_band_path %>
+<br><br>
 <%= link_to "Delete Account", manager_path(@manager), method: :delete, data: { confirm: "Are you sure you want to delete your account?"} %>
 
