--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'errors', locals: {model: @band} %>
 <br><br>
 <%= form_for @band do |f| %>
-    <%= f.label "Name t: " %>
+    <%= f.label "Name: " %>
     <%= f.text_field :name %>
     
 
