--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <% if !current_manager %>
       <a class="navbar-brand" href="<%= new_manager_path %>"/>Sign Up</a>
       <%= link_to "Log in", signin_path, class:"navbar-brand" %>
+      <%= button_to "Log in with Facebook", '/auth/facebook' %>
     <% end %>
     <% if current_manager %>
       <%= link_to "#{current_manager.username}'s profile", manager_path(current_manager), class:"navbar-brand"%>
