--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -4,7 +4,7 @@
 <ul>
     <% @member.bands.each do |band| %>
         <% if current_manager.bands.include?(band) %>
-            <li><%= link_to band.name, band_path(band) %> - <%= get_instrument(@member, band) %></li>
+            <li><%= link_to band.name, band_path(band) %> - <%= get_band_member(@member, band).instrument %></li>
         <% end %>
     <% end %>
 </ul>
@@ -13,7 +13,7 @@
 <ul>
     <% @member.bands.each do |band| %>
         <% if !current_manager.bands.include?(band) %>
-            <li><%= band.name %> - <%= get_instrument(@member, band) %></li>
+            <li><%= band.name %> - <%= get_band_member(@member, band).instrument %></li>
         <% end %>
     <% end %>
 </ul>
