--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,11 +1,14 @@
 <h1><%= @band.name %></h1>
 <ul>
     <% @band.members.each do |member| %>
-        <li><%= link_to member.name, member_path(member) %> - <%= get_band_member(member, @band).instrument %></li>
-        <%= link_to "Choose Instrument", edit_band_member_path(get_band_member(member, @band)) %>
+        <li>
+            <%= link_to member.name, member_path(member) %> - 
+            <%= get_band_member(member, @band).instrument %> - 
+            <%= link_to "Edit Instrument", edit_band_member_path(get_band_member(member, @band)) %>
+        </li> 
     <% end %>
 </ul>
 <br>
-<%= link_to "Edit", edit_band_path(@band) %>
+<%= link_to "Edit Members", edit_band_path(@band) %>
 <br><br>
-<%= link_to 'Delete', band_path(@band), method: :delete, data: { confirm: "Are you sure?" }%>
+<%= link_to 'Delete Band', band_path(@band), method: :delete, data: { confirm: "Are you sure?" }%>
