--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Your Bands: </h1>
-
+<h1>Bands You Manage: </h1>
 <ul>
 <% @bands.each do |band| %>
-    <li><%= link_to band.name, band_path(band) %></li>
+    <li><%= link_to band.name, manager_band_path(current_manager, band) %></li>
 <% end %>
-</ul>
+<br>
+<%= link_to "Add New Band", new_manager_band_path(@manager) %>
