--- a/app/views/managers/_form.html.erb
+++ b/app/views/managers/_form.html.erb
@@ -6,5 +6,5 @@
     <%= f.text_field :email %>
     <%= f.label :password %>
     <%= f.password_field :password %>
-    <%= f.submit "Sign Up" %>
+    <%= f.submit %>
 <% end %>
