dried up update methods in controllers

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -9,6 +9,6 @@
     <% end %>
 </ul>
 <br>
-<%= link_to "Edit Members", edit_band_path(@band) %>
+<%= link_to "Edit Band", edit_band_path(@band) %>
 <br><br>
 <%= link_to 'Delete Band', band_path(@band), method: :delete, data: { confirm: "Are you sure?" }%>
